--- a/.gitignore
+++ b/.gitignore
@@ -158,3 +158,7 @@ cython_debug/
 #  and can be added to the global gitignore or merged into this file.  For a more nuclear
 #  option (not recommended) you can uncomment the following to ignore the entire idea folder.
 #.idea/
+#
+
+# no idea what this is but it is too large to be git pushed.
+analysis/vbs_vvh/topeft-envs/env_spec_faf7f98e_edit_HEAD.tar.gz
